<resources>
    <string name="app_name">HW_30.10.2017</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="online">online</string>
    <string name="pavel_kalinin">Pavel Kalinin</string>
    <string name="games">Games</string>
    <string name="music">Music</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="asks">Asks</string>
    <string name="news">News</string>
    <string name="friend_name_text_view">Some Name</string>
    <string name="body_message_text_view">Some text, some text, some text, som...</string>
    <string name="time_last_message_text_view">today</string>
</resources>
