<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:title="@string/news"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_asks"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/asks"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/messages"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/friends"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/groups"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/photos"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/videos"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_audio_track_black_24dp"
            android:title="@string/music"
            android:textSize="@dimen/size_text_14"/>
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/games"
            android:textSize="@dimen/size_text_14"/>
    </group>
</menu>